<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>node_exploration</name>
  <version>0.0.0</version>
  <description>Demonstration package for an issue relating node discovery</description>
  <maintainer email="git@fexner.de">Felix Exner</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>examples_rclpy_minimal_publisher</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
